src/instructions/snapshots/osrm_model_extensions__instructions__voice_announcements__tests__basic_step.snap
---
source: src/instructions/voice_announcements.rs
expression: announcements
---
[
    Maneuver(
        Distance {
            value: 70.0,
            unit: Meters,
        },
    ),
]
